Prototype of DMS file Upload
